styling for comments. updated ds comment layout markup.

--- a/public/sites/all/themes/gesso/patternlab/public/patterns/02-organisms-01-content-types-community-detail/02-organisms-01-content-types-community-detail.html
+++ b/public/sites/all/themes/gesso/patternlab/public/patterns/02-organisms-01-content-types-community-detail/02-organisms-01-content-types-community-detail.html
@@ -96,7 +96,7 @@
                 <article class="card card--background">
                   <div class="card__content">
                     <h2 class="card__type">Toolkit</h2>
-                    <h3 class="card__title"><a href="http://hipsteripsum.me/">Whatever swag accusamus occupy, gentrify butcher tote bag</a></h3>
+                    <h3 class="card__title"><a href="http://veggieipsum.com">Veggies sunt bona vobis, proinde vos postulo</a></h3>
                     <div class="card__author">
                       <div class="card__author-inner">
                         <div class="card__author-image"><img src="../../images-patternlab/buffy-35-35.jpg"></div>
@@ -124,7 +124,7 @@
                 <article class="card card--background">
                   <div class="card__content">
                     <h2 class="card__type">Toolkit</h2>
-                    <h3 class="card__title"><a href="http://chrisvalleskey.com/fillerama/">Help, help, I'm being repressed!</a></h3>
+                    <h3 class="card__title"><a href="http://lorizzle.nl/">Nullizzle shizznit velizzle, hizzle, suscipit own yo', gravida vizzle, arcu.</a></h3>
                     <div class="card__author">
                       <div class="card__author-inner">
                         <div class="card__author-image"><img src="../../images-patternlab/buffy-35-35.jpg"></div>
@@ -138,7 +138,7 @@
                 <article class="card card--background">
                   <div class="card__content">
                     <h2 class="card__type">Toolkit</h2>
-                    <h3 class="card__title"><a href="http://baconipsum.com/">Bacon ipsum dolor sit amet turducken strip steak beef ribs shank</a></h3>
+                    <h3 class="card__title"><a href="http://chrisvalleskey.com/fillerama/">Help, help, I'm being repressed!</a></h3>
                     <div class="card__author">
                       <div class="card__author-inner">
                         <div class="card__author-image"><img src="../../images-patternlab/buffy-35-35.jpg"></div>
@@ -159,12 +159,12 @@
               <div class="views-row">
                 <article class="card">
                   <div class="card__image">
-                    <a href="http://www.niemanlab.org/journo-ipsum/"><img src="http://lorempixel.com/500/300/nature/3/" alt="Card 5:3" height="300" width="500">
+                    <a href="http://veggieipsum.com"><img src="http://lorempixel.com/500/300/food/3/" alt="Card 5:3" height="300" width="500">
 </a>
                   </div>
                   <div class="card__content">
-                    <h3 class="card__title"><a href="http://www.niemanlab.org/journo-ipsum/">Marshall McLuhan Colbert bump backpack journalist vast wasteland Romenesko CPM</a></h3>
-                    <div><p>Like button audience atomization overcome Colbert bump Free Darko inverted pyramid we will make them pay, digital circulation strategy Like button totally blowing up on Twitter church of the savvy. Pictures of Goats section open source discuss Frontline analog thinking filters paidContent.</p></div>
+                    <h3 class="card__title"><a href="http://veggieipsum.com">Veggies sunt bona vobis, proinde vos postulo</a></h3>
+                    <div><p>Mung bean squash sorrel taro coriander collard greens gumbo bitterleaf tomato. Taro water chestnut celtuce turnip yarrow celery endive scallion black-eyed pea onion. Aubergine dulse turnip greens mustard salsify garlic soybean parsley bitterleaf desert raisin courgette.</p></div>
                     <div class="card__counts">
                       <div class="view">
                         <div class="has-icon--evidence" title="Evidence">0</div>
@@ -188,12 +188,12 @@
               <div class="views-row">
                 <article class="card">
                   <div class="card__image">
-                    <a href="http://www.cheeseipsum.co.uk/"><img src="http://lorempixel.com/500/300/abstract/3/" alt="Card 5:3" height="300" width="500">
+                    <a href="http://chrisvalleskey.com/fillerama/"><img src="http://lorempixel.com/500/300/transport/3/" alt="Card 5:3" height="300" width="500">
 </a>
                   </div>
                   <div class="card__content">
-                    <h3 class="card__title"><a href="http://www.cheeseipsum.co.uk/">Cottage cheese brie lancashire. Boursin when the cheese comes out.</a></h3>
-                    <div><p>Queso caerphilly cheesecake. Parmesan chalk and cheese port-salut port-salut babybel cottage cheese cheesy grin pepper jack. Croque monsieur paneer st. agur blue cheese emmental airedale monterey jack bavarian bergkase cheese triangles. Halloumi parmesan.</p></div>
+                    <h3 class="card__title"><a href="http://chrisvalleskey.com/fillerama/">Rebel Mission to Ord Mantell</a></h3>
+                    <div><p>I find your lack of faith disturbing. A tremor in the Force. The last time I felt it was in the presence of my old master. Don't act so surprised, Your Highness. You weren't on any mercy mission this time. Several transmissions were beamed to this ship by Rebel spies. I want to know what happened to the plans they sent you. The plans you refer to will soon be back in our hands.</p></div>
                     <div class="card__counts">
                       <div class="view">
                         <div class="has-icon--evidence" title="Evidence">0</div>
@@ -217,12 +217,12 @@
               <div class="views-row">
                 <article class="card">
                   <div class="card__image">
-                    <a href="http://chrisvalleskey.com/fillerama/"><img src="http://lorempixel.com/500/300/cats/3/" alt="Card 5:3" height="300" width="500">
+                    <a href="http://lorizzle.nl/"><img src="http://lorempixel.com/500/300/animals/3/" alt="Card 5:3" height="300" width="500">
 </a>
                   </div>
                   <div class="card__content">
-                    <h3 class="card__title"><a href="http://chrisvalleskey.com/fillerama/">Help, help, I'm being repressed!</a></h3>
-                    <div><p>The Knights Who Say Ni demand a sacrifice! …Are you suggesting that coconuts migrate? Knights of Ni, we are but simple travelers who seek the enchanter who lives beyond these woods. You don't frighten us, English pig-dogs! Go and boil your bottoms, sons of a silly person! I blow my nose at you, so-called Ah-thoor Keeng, you and all your silly English K-n-n-n-n-n-n-n-niggits!</p></div>
+                    <h3 class="card__title"><a href="http://lorizzle.nl/">Nullizzle shizznit velizzle, hizzle, suscipit own yo', gravida vizzle, arcu.</a></h3>
+                    <div><p>Fizzle crazy tortor. Sed rizzle. Ass pimpin' dolor dapibizzle turpis tempizzle fo shizzle my nizzle. Maurizzle pellentesque its fo rizzle izzle turpis. Get down get down we gonna chung nizzle. Shizzlin dizzle eleifend rhoncizzle break it down. In yo ghetto platea dictumst. Bling bling dapibizzle. Curabitur break yo neck, yall fo, pretizzle eu, go to hizzle dope, own yo' vitae, nunc. Bizzle suscipizzle. Semper velit sizzle fo.</p></div>
                     <div class="card__counts">
                       <div class="view">
                         <div class="has-icon--evidence" title="Evidence">0</div>
@@ -258,7 +258,7 @@
                 <article class="card">
                   <div class="card__content">
                     <h2 class="card__type">Toolkit</h2>
-                    <h3 class="card__primary-title"><a href="http://www.niemanlab.org/journo-ipsum/">Marshall McLuhan Colbert bump backpack journalist vast wasteland Romenesko CPM</a></h3>
+                    <h3 class="card__primary-title"><a href="http://veggieipsum.com">Veggies sunt bona vobis, proinde vos postulo</a></h3>
                     <div class="card__author">
                       <div class="card__author-image"><img src="../../images-patternlab/buffy-35-35.jpg"></div>
                       <div class="card__author-name">Buffy Summers</div>
@@ -288,7 +288,7 @@
                 <article class="card">
                   <div class="card__content">
                     <h2 class="card__type">Toolkit</h2>
-                    <h3 class="card__primary-title"><a href="http://www.cheeseipsum.co.uk/">Cottage cheese brie lancashire. Boursin when the cheese comes out.</a></h3>
+                    <h3 class="card__primary-title"><a href="http://chrisvalleskey.com/fillerama/">Rebel Mission to Ord Mantell</a></h3>
                     <div class="card__author">
                       <div class="card__author-image"><img src="../../images-patternlab/buffy-35-35.jpg"></div>
                       <div class="card__author-name">Buffy Summers</div>
@@ -318,7 +318,7 @@
                 <article class="card">
                   <div class="card__content">
                     <h2 class="card__type">Toolkit</h2>
-                    <h3 class="card__primary-title"><a href="http://chrisvalleskey.com/fillerama/">Help, help, I'm being repressed!</a></h3>
+                    <h3 class="card__primary-title"><a href="http://lorizzle.nl/">Nullizzle shizznit velizzle, hizzle, suscipit own yo', gravida vizzle, arcu.</a></h3>
                     <div class="card__author">
                       <div class="card__author-image"><img src="../../images-patternlab/buffy-35-35.jpg"></div>
                       <div class="card__author-name">Buffy Summers</div>
@@ -358,7 +358,7 @@
               <div class="views-row">
                 <article class="card">
                   <div class="card__content">
-                    <h3 class="card__primary-title"><a href="http://www.niemanlab.org/journo-ipsum/">Marshall McLuhan Colbert bump backpack journalist vast wasteland Romenesko CPM</a></h3>
+                    <h3 class="card__primary-title"><a href="http://veggieipsum.com">Veggies sunt bona vobis, proinde vos postulo</a></h3>
                     <div class="card__number">$30,000,000</div>
                     <div class="card__due-date">Due by: 3/21/2015</div> 
                     <div class="card__list">
@@ -390,7 +390,7 @@
               <div class="views-row">
                 <article class="card">
                   <div class="card__content">
-                    <h3 class="card__primary-title"><a href="http://www.cheeseipsum.co.uk/">Cottage cheese brie lancashire. Boursin when the cheese comes out.</a></h3>
+                    <h3 class="card__primary-title"><a href="http://chrisvalleskey.com/fillerama/">Rebel Mission to Ord Mantell</a></h3>
                     <div class="card__number">$30,000,000</div>
                     <div class="card__due-date">Due by: 3/21/2015</div> 
                     <div class="card__list">
@@ -422,7 +422,7 @@
               <div class="views-row">
                 <article class="card">
                   <div class="card__content">
-                    <h3 class="card__primary-title"><a href="http://chrisvalleskey.com/fillerama/">Help, help, I'm being repressed!</a></h3>
+                    <h3 class="card__primary-title"><a href="http://lorizzle.nl/">Nullizzle shizznit velizzle, hizzle, suscipit own yo', gravida vizzle, arcu.</a></h3>
                     <div class="card__number">$30,000,000</div>
                     <div class="card__due-date">Due by: 3/21/2015</div> 
                     <div class="card__list">
