added funding op card icon

--- a/public/sites/all/themes/gesso/patternlab/public/patterns/02-organisms-02-view-modes-funding-op-teaser/02-organisms-02-view-modes-funding-op-teaser.escaped.html
+++ b/public/sites/all/themes/gesso/patternlab/public/patterns/02-organisms-02-view-modes-funding-op-teaser/02-organisms-02-view-modes-funding-op-teaser.escaped.html
@@ -1,5 +1,5 @@
 &lt;article class=&quot;card card--icons&quot;&gt;
-  &lt;div class=&quot;card__number&quot;&gt;$30,000,000&lt;/div&gt;
+  &lt;div class=&quot;card__number&quot;&gt;30,000,000&lt;/div&gt;
   &lt;div class=&quot;card__image&quot;&gt;
     &lt;a href=&quot;#&quot;&gt;&lt;img src=&quot;http://fpoimg.com/500x300?text=Card 5:3&quot; alt=&quot;Card 5:3&quot; height=&quot;300&quot; width=&quot;500&quot;&gt;
 &lt;/a&gt;
