--- a/public/sites/all/themes/gesso/patternlab/public/patterns/02-organisms-02-view-modes-funding-op-teaser/02-organisms-02-view-modes-funding-op-teaser.html
+++ b/public/sites/all/themes/gesso/patternlab/public/patterns/02-organisms-02-view-modes-funding-op-teaser/02-organisms-02-view-modes-funding-op-teaser.html
@@ -55,7 +55,7 @@
       <a href="#main" class="skiplinks__link element-invisible element-focusable">Skip to main content</a>
     </div>
 <article class="card card--icons">
-  <div class="card__number">$30,000,000</div>
+  <div class="card__number">30,000,000</div>
   <div class="card__image">
     <a href="#"><img src="http://fpoimg.com/500x300?text=Card 5:3" alt="Card 5:3" height="300" width="500">
 </a>
