--- a/public/sites/all/themes/gesso/patternlab/public/patterns/02-organisms-02-view-modes/index.html
+++ b/public/sites/all/themes/gesso/patternlab/public/patterns/02-organisms-02-view-modes/index.html
@@ -137,6 +137,10 @@
 						<div class="sg-pattern-body">
 							<article class="card">
   <h2 class="card__date">September 21</h2>
+  <div class="card__image">
+    <a href="#"><img src="http://fpoimg.com/500x300?text=Card 5:3" alt="Card 5:3" height="300" width="500">
+</a>
+  </div>
   <div class="card__content">
     <h3 class="card__primary-title"><a href="#">Title</a></h3>
     <div class="card__meta">
@@ -152,11 +156,19 @@
   </div>
 </article>
 							<div class="sg-code" style="display: none">
+									<div class="sg-code-contains">
+										This pattern contains: 
+											<a href="../../patterns/00-atoms-04-images-04-card-image/00-atoms-04-images-04-card-image.html"><code>atoms-card-image</code></a>
+									</div>
 								<h3 class="sg-code-head">HTML</h3>
 								<pre class="sg-code-html">
 									<code>
 										&lt;article class=&quot;card&quot;&gt;
   &lt;h2 class=&quot;card__date&quot;&gt;September 21&lt;/h2&gt;
+  &lt;div class=&quot;card__image&quot;&gt;
+    &lt;a href=&quot;#&quot;&gt;&lt;img src=&quot;http://fpoimg.com/500x300?text=Card 5:3&quot; alt=&quot;Card 5:3&quot; height=&quot;300&quot; width=&quot;500&quot;&gt;
+&lt;/a&gt;
+  &lt;/div&gt;
   &lt;div class=&quot;card__content&quot;&gt;
     &lt;h3 class=&quot;card__primary-title&quot;&gt;&lt;a href=&quot;#&quot;&gt;Title&lt;/a&gt;&lt;/h3&gt;
     &lt;div class=&quot;card__meta&quot;&gt;
@@ -180,7 +192,7 @@
 						<h2 class="sg-pattern-head" ><a href="../../patterns/02-organisms-02-view-modes-funding-op-teaser/02-organisms-02-view-modes-funding-op-teaser.html" class="patternLink" data-patternpartial="organisms-funding-op-teaser">Funding Op Teaser</a></h2>
 						<div class="sg-pattern-body">
 							<article class="card card--icons">
-  <div class="card__number">$30,000,000</div>
+  <div class="card__number">30,000,000</div>
   <div class="card__image">
     <a href="#"><img src="http://fpoimg.com/500x300?text=Card 5:3" alt="Card 5:3" height="300" width="500">
 </a>
@@ -227,7 +239,7 @@
 								<pre class="sg-code-html">
 									<code>
 										&lt;article class=&quot;card card--icons&quot;&gt;
-  &lt;div class=&quot;card__number&quot;&gt;$30,000,000&lt;/div&gt;
+  &lt;div class=&quot;card__number&quot;&gt;30,000,000&lt;/div&gt;
   &lt;div class=&quot;card__image&quot;&gt;
     &lt;a href=&quot;#&quot;&gt;&lt;img src=&quot;http://fpoimg.com/500x300?text=Card 5:3&quot; alt=&quot;Card 5:3&quot; height=&quot;300&quot; width=&quot;500&quot;&gt;
 &lt;/a&gt;
