--- a/public/sites/all/themes/gesso/patternlab/public/patterns/02-organisms-02-view-modes-event-teaser/02-organisms-02-view-modes-event-teaser.escaped.html
+++ b/public/sites/all/themes/gesso/patternlab/public/patterns/02-organisms-02-view-modes-event-teaser/02-organisms-02-view-modes-event-teaser.escaped.html
@@ -1,5 +1,9 @@
 &lt;article class=&quot;card&quot;&gt;
   &lt;h2 class=&quot;card__date&quot;&gt;September 21&lt;/h2&gt;
+  &lt;div class=&quot;card__image&quot;&gt;
+    &lt;a href=&quot;#&quot;&gt;&lt;img src=&quot;http://fpoimg.com/500x300?text=Card 5:3&quot; alt=&quot;Card 5:3&quot; height=&quot;300&quot; width=&quot;500&quot;&gt;
+&lt;/a&gt;
+  &lt;/div&gt;
   &lt;div class=&quot;card__content&quot;&gt;
     &lt;h3 class=&quot;card__primary-title&quot;&gt;&lt;a href=&quot;#&quot;&gt;Title&lt;/a&gt;&lt;/h3&gt;
     &lt;div class=&quot;card__meta&quot;&gt;
