--- a/public/sites/all/themes/gesso/patternlab/public/patterns/02-organisms-02-view-modes-event-teaser/02-organisms-02-view-modes-event-teaser.html
+++ b/public/sites/all/themes/gesso/patternlab/public/patterns/02-organisms-02-view-modes-event-teaser/02-organisms-02-view-modes-event-teaser.html
@@ -56,6 +56,10 @@
     </div>
 <article class="card">
   <h2 class="card__date">September 21</h2>
+  <div class="card__image">
+    <a href="#"><img src="http://fpoimg.com/500x300?text=Card 5:3" alt="Card 5:3" height="300" width="500">
+</a>
+  </div>
   <div class="card__content">
     <h3 class="card__primary-title"><a href="#">Title</a></h3>
     <div class="card__meta">
@@ -75,7 +79,7 @@
 	<script>
 		// handle injection of items from PHP
 		var patternPartial = "organisms-event-teaser";
-		var lineage        = [];
+		var lineage        = [{"lineagePattern":"atoms-card-image","lineagePath":"..\/..\/patterns\/00-atoms-04-images-04-card-image\/00-atoms-04-images-04-card-image.html","lineageState":"inprogress"}];
 		var lineageR       = [{"lineagePattern":"templates-card-types","lineagePath":"..\/..\/patterns\/03-templates-card-types\/03-templates-card-types.html","lineageState":"inprogress"}];
 		var patternState   = "inprogress";
 		var cssEnabled     = false;
