--- a/public/sites/all/themes/gesso/patternlab/public/patterns/03-templates-innovation-landing/03-templates-innovation-landing.html
+++ b/public/sites/all/themes/gesso/patternlab/public/patterns/03-templates-innovation-landing/03-templates-innovation-landing.html
@@ -552,12 +552,12 @@
                 <div class="views-row">
                   <article class="card card--icons">
                     <div class="card__image">
-                      <a href="http://hipsteripsum.me/"><img src="http://lorempixel.com/500/300/business/3/" alt="Card 5:3" height="300" width="500">
+                      <a href="http://www.cheeseipsum.co.uk/"><img src="http://lorempixel.com/500/300/abstract/3/" alt="Card 5:3" height="300" width="500">
 </a>
                     </div>
                     <div class="card__content">
-                      <h3 class="card__title"><a href="http://hipsteripsum.me/">Whatever swag accusamus occupy, gentrify butcher tote bag</a></h3>
-                      <div><p>Fanny pack ullamco et veniam semiotics. Shoreditch PBR reprehenderit cliche, magna Tonx aesthetic. Narwhal photo booth DIY aute post-ironic anim. Vice cliche brunch est before they sold out fap, street art Odd Future fashion axe messenger bag nihil Tonx tattooed. Nihil hashtag incididunt, do eu art party Banksy jean shorts four loko typewriter.</p></div>
+                      <h3 class="card__title"><a href="http://www.cheeseipsum.co.uk/">Cottage cheese brie lancashire. Boursin when the cheese comes out.</a></h3>
+                      <div><p>Queso caerphilly cheesecake. Parmesan chalk and cheese port-salut port-salut babybel cottage cheese cheesy grin pepper jack. Croque monsieur paneer st. agur blue cheese emmental airedale monterey jack bavarian bergkase cheese triangles. Halloumi parmesan.</p></div>
                       <div class="card__counts">
                         <div class="view">
                           <div class="has-icon--evidence" title="Evidence">0</div>
@@ -610,70 +610,12 @@
                 <div class="views-row">
                   <article class="card card--icons">
                     <div class="card__image">
-                      <a href="http://chrisvalleskey.com/fillerama/"><img src="http://lorempixel.com/500/300/transport/3/" alt="Card 5:3" height="300" width="500">
+                      <a href="http://veggieipsum.com"><img src="http://lorempixel.com/500/300/food/3/" alt="Card 5:3" height="300" width="500">
 </a>
                     </div>
                     <div class="card__content">
-                      <h3 class="card__title"><a href="http://chrisvalleskey.com/fillerama/">Rebel Mission to Ord Mantell</a></h3>
-                      <div><p>I find your lack of faith disturbing. A tremor in the Force. The last time I felt it was in the presence of my old master. Don't act so surprised, Your Highness. You weren't on any mercy mission this time. Several transmissions were beamed to this ship by Rebel spies. I want to know what happened to the plans they sent you. The plans you refer to will soon be back in our hands.</p></div>
-                      <div class="card__counts">
-                        <div class="view">
-                          <div class="has-icon--evidence" title="Evidence">0</div>
-                        </div>
-                        <div class="view">
-                          <div class="has-icon--comment" title="Comments">12</div>
-                        </div>
-                        <div class="view">
-                          <div class="has-icon--funding" title="Funding">5</div>
-                        </div>
-                        <div class="view">
-                          <div class="has-icon--favorite" title="Favorites">6</div>
-                        </div>
-                        <div class="view">
-                          <div class="has-icon--assistance" title="Assistance">1</div>
-                        </div>
-                      </div>
-                    </div>
-                  </article>
-                </div>
-                <div class="views-row">
-                  <article class="card card--icons">
-                    <div class="card__image">
-                      <a href="http://cupcakeipsum.com/"><img src="http://lorempixel.com/500/300/nightlife/3/" alt="Card 5:3" height="300" width="500">
-</a>
-                    </div>
-                    <div class="card__content">
-                      <h3 class="card__title"><a href="http://cupcakeipsum.com/">Danish danish candy canes bonbon cheesecake danish marzipan</a></h3>
-                      <div><p>Sugar plum wafer soufflé ice cream. Wafer topping biscuit pie gummi bears topping. Gummies toffee powder applicake oat cake cookie. Bear claw candy tootsie roll fruitcake danish applicake candy canes macaroon. Liquorice tiramisu danish cotton candy gummies. Tiramisu dessert gummi bears macaroon sweet roll jelly-o gummi bears marzipan.</p></div>
-                      <div class="card__counts">
-                        <div class="view">
-                          <div class="has-icon--evidence" title="Evidence">0</div>
-                        </div>
-                        <div class="view">
-                          <div class="has-icon--comment" title="Comments">12</div>
-                        </div>
-                        <div class="view">
-                          <div class="has-icon--funding" title="Funding">5</div>
-                        </div>
-                        <div class="view">
-                          <div class="has-icon--favorite" title="Favorites">6</div>
-                        </div>
-                        <div class="view">
-                          <div class="has-icon--assistance" title="Assistance">1</div>
-                        </div>
-                      </div>
-                    </div>
-                  </article>
-                </div>
-                <div class="views-row">
-                  <article class="card card--icons">
-                    <div class="card__image">
-                      <a href="http://lorizzle.nl/"><img src="http://lorempixel.com/500/300/animals/3/" alt="Card 5:3" height="300" width="500">
-</a>
-                    </div>
-                    <div class="card__content">
-                      <h3 class="card__title"><a href="http://lorizzle.nl/">Nullizzle shizznit velizzle, hizzle, suscipit own yo', gravida vizzle, arcu.</a></h3>
-                      <div><p>Fizzle crazy tortor. Sed rizzle. Ass pimpin' dolor dapibizzle turpis tempizzle fo shizzle my nizzle. Maurizzle pellentesque its fo rizzle izzle turpis. Get down get down we gonna chung nizzle. Shizzlin dizzle eleifend rhoncizzle break it down. In yo ghetto platea dictumst. Bling bling dapibizzle. Curabitur break yo neck, yall fo, pretizzle eu, go to hizzle dope, own yo' vitae, nunc. Bizzle suscipizzle. Semper velit sizzle fo.</p></div>
+                      <h3 class="card__title"><a href="http://veggieipsum.com">Veggies sunt bona vobis, proinde vos postulo</a></h3>
+                      <div><p>Mung bean squash sorrel taro coriander collard greens gumbo bitterleaf tomato. Taro water chestnut celtuce turnip yarrow celery endive scallion black-eyed pea onion. Aubergine dulse turnip greens mustard salsify garlic soybean parsley bitterleaf desert raisin courgette.</p></div>
                       <div class="card__counts">
                         <div class="view">
                           <div class="has-icon--evidence" title="Evidence">0</div>
@@ -726,12 +668,70 @@
                 <div class="views-row">
                   <article class="card card--icons">
                     <div class="card__image">
-                      <a href="http://baconipsum.com/"><img src="http://lorempixel.com/500/300/city/3/" alt="Card 5:3" height="300" width="500">
+                      <a href="http://www.niemanlab.org/journo-ipsum/"><img src="http://lorempixel.com/500/300/nature/3/" alt="Card 5:3" height="300" width="500">
 </a>
                     </div>
                     <div class="card__content">
-                      <h3 class="card__title"><a href="http://baconipsum.com/">Bacon ipsum dolor sit amet turducken strip steak beef ribs shank</a></h3>
-                      <div><p>Boudin sausage jerky pastrami ground round salami biltong. Sausage fatback strip steak doner pork loin, pork belly drumstick ham short loin hamburger shankle. Short ribs sirloin rump tri-tip beef biltong. Meatball pig salami, jowl pork loin fatback short loin drumstick andouille.</p></div>
+                      <h3 class="card__title"><a href="http://www.niemanlab.org/journo-ipsum/">Marshall McLuhan Colbert bump backpack journalist vast wasteland Romenesko CPM</a></h3>
+                      <div><p>Like button audience atomization overcome Colbert bump Free Darko inverted pyramid we will make them pay, digital circulation strategy Like button totally blowing up on Twitter church of the savvy. Pictures of Goats section open source discuss Frontline analog thinking filters paidContent.</p></div>
+                      <div class="card__counts">
+                        <div class="view">
+                          <div class="has-icon--evidence" title="Evidence">0</div>
+                        </div>
+                        <div class="view">
+                          <div class="has-icon--comment" title="Comments">12</div>
+                        </div>
+                        <div class="view">
+                          <div class="has-icon--funding" title="Funding">5</div>
+                        </div>
+                        <div class="view">
+                          <div class="has-icon--favorite" title="Favorites">6</div>
+                        </div>
+                        <div class="view">
+                          <div class="has-icon--assistance" title="Assistance">1</div>
+                        </div>
+                      </div>
+                    </div>
+                  </article>
+                </div>
+                <div class="views-row">
+                  <article class="card card--icons">
+                    <div class="card__image">
+                      <a href="http://hipsteripsum.me/"><img src="http://lorempixel.com/500/300/business/3/" alt="Card 5:3" height="300" width="500">
+</a>
+                    </div>
+                    <div class="card__content">
+                      <h3 class="card__title"><a href="http://hipsteripsum.me/">Whatever swag accusamus occupy, gentrify butcher tote bag</a></h3>
+                      <div><p>Fanny pack ullamco et veniam semiotics. Shoreditch PBR reprehenderit cliche, magna Tonx aesthetic. Narwhal photo booth DIY aute post-ironic anim. Vice cliche brunch est before they sold out fap, street art Odd Future fashion axe messenger bag nihil Tonx tattooed. Nihil hashtag incididunt, do eu art party Banksy jean shorts four loko typewriter.</p></div>
+                      <div class="card__counts">
+                        <div class="view">
+                          <div class="has-icon--evidence" title="Evidence">0</div>
+                        </div>
+                        <div class="view">
+                          <div class="has-icon--comment" title="Comments">12</div>
+                        </div>
+                        <div class="view">
+                          <div class="has-icon--funding" title="Funding">5</div>
+                        </div>
+                        <div class="view">
+                          <div class="has-icon--favorite" title="Favorites">6</div>
+                        </div>
+                        <div class="view">
+                          <div class="has-icon--assistance" title="Assistance">1</div>
+                        </div>
+                      </div>
+                    </div>
+                  </article>
+                </div>
+                <div class="views-row">
+                  <article class="card card--icons">
+                    <div class="card__image">
+                      <a href="http://lorizzle.nl/"><img src="http://lorempixel.com/500/300/animals/3/" alt="Card 5:3" height="300" width="500">
+</a>
+                    </div>
+                    <div class="card__content">
+                      <h3 class="card__title"><a href="http://lorizzle.nl/">Nullizzle shizznit velizzle, hizzle, suscipit own yo', gravida vizzle, arcu.</a></h3>
+                      <div><p>Fizzle crazy tortor. Sed rizzle. Ass pimpin' dolor dapibizzle turpis tempizzle fo shizzle my nizzle. Maurizzle pellentesque its fo rizzle izzle turpis. Get down get down we gonna chung nizzle. Shizzlin dizzle eleifend rhoncizzle break it down. In yo ghetto platea dictumst. Bling bling dapibizzle. Curabitur break yo neck, yall fo, pretizzle eu, go to hizzle dope, own yo' vitae, nunc. Bizzle suscipizzle. Semper velit sizzle fo.</p></div>
                       <div class="card__counts">
                         <div class="view">
                           <div class="has-icon--evidence" title="Evidence">0</div>
@@ -784,12 +784,12 @@
                 <div class="views-row">
                   <article class="card card--icons">
                     <div class="card__image">
-                      <a href="http://slipsum.com/lite/"><img src="http://lorempixel.com/500/300/people/3/" alt="Card 5:3" height="300" width="500">
+                      <a href="http://cupcakeipsum.com/"><img src="http://lorempixel.com/500/300/nightlife/3/" alt="Card 5:3" height="300" width="500">
 </a>
                     </div>
                     <div class="card__content">
-                      <h3 class="card__title"><a href="http://slipsum.com/lite/">Yeah, I like animals better than people sometimes</a></h3>
-                      <div><p>Especially dogs. Dogs are the best. Every time you come home, they act like they haven't seen you in a year. And the good thing about dogs... is they got different dogs for different people. Like pit bulls. The dog of dogs. Pit bull can be the right man's best friend... or the wrong man's worst enemy. You going to give me a dog for a pet, give me a pit bull.</p></div>
+                      <h3 class="card__title"><a href="http://cupcakeipsum.com/">Danish danish candy canes bonbon cheesecake danish marzipan</a></h3>
+                      <div><p>Sugar plum wafer soufflé ice cream. Wafer topping biscuit pie gummi bears topping. Gummies toffee powder applicake oat cake cookie. Bear claw candy tootsie roll fruitcake danish applicake candy canes macaroon. Liquorice tiramisu danish cotton candy gummies. Tiramisu dessert gummi bears macaroon sweet roll jelly-o gummi bears marzipan.</p></div>
                       <div class="card__counts">
                         <div class="view">
                           <div class="has-icon--evidence" title="Evidence">0</div>
