--- a/public/sites/all/themes/gesso/patternlab/public/patterns/02-organisms-02-view-modes-user-teaser/02-organisms-02-view-modes-user-teaser.escaped.html
+++ b/public/sites/all/themes/gesso/patternlab/public/patterns/02-organisms-02-view-modes-user-teaser/02-organisms-02-view-modes-user-teaser.escaped.html
@@ -1,6 +1,6 @@
 &lt;article class=&quot;card card--center&quot;&gt;
   &lt;div class=&quot;card__image&quot;&gt;
-    &lt;a href=&quot;#&quot;&gt;&lt;img src=&quot;&quot; alt=&quot;&quot;&gt;&lt;/a&gt;
+    &lt;a href=&quot;#&quot;&gt;&lt;img src=&quot;http://fpoimg.com/500x300?text=Card 5:3&quot; alt=&quot;Card 5:3&quot;&gt;&lt;/a&gt;
   &lt;/div&gt;
   &lt;div class=&quot;card__content&quot;&gt;
     &lt;h3 class=&quot;card__title&quot;&gt;&lt;a href=&quot;#&quot;&gt;&lt;/a&gt;&lt;/h3&gt;
