--- a/public/sites/all/themes/gesso/patternlab/public/patterns/02-organisms-02-view-modes/index.html
+++ b/public/sites/all/themes/gesso/patternlab/public/patterns/02-organisms-02-view-modes/index.html
@@ -728,7 +728,7 @@
 						<div class="sg-pattern-body">
 							<article class="card card--center">
   <div class="card__image">
-    <a href="#"><img src="" alt=""></a>
+    <a href="#"><img src="http://fpoimg.com/500x300?text=Card 5:3" alt="Card 5:3"></a>
   </div>
   <div class="card__content">
     <h3 class="card__title"><a href="#"></a></h3>
@@ -743,7 +743,7 @@
 									<code>
 										&lt;article class=&quot;card card--center&quot;&gt;
   &lt;div class=&quot;card__image&quot;&gt;
-    &lt;a href=&quot;#&quot;&gt;&lt;img src=&quot;&quot; alt=&quot;&quot;&gt;&lt;/a&gt;
+    &lt;a href=&quot;#&quot;&gt;&lt;img src=&quot;http://fpoimg.com/500x300?text=Card 5:3&quot; alt=&quot;Card 5:3&quot;&gt;&lt;/a&gt;
   &lt;/div&gt;
   &lt;div class=&quot;card__content&quot;&gt;
     &lt;h3 class=&quot;card__title&quot;&gt;&lt;a href=&quot;#&quot;&gt;&lt;/a&gt;&lt;/h3&gt;
