--- a/public/sites/all/themes/gesso/patternlab/public/patterns/02-organisms-01-content-types-community-detail/02-organisms-01-content-types-community-detail.escaped.html
+++ b/public/sites/all/themes/gesso/patternlab/public/patterns/02-organisms-01-content-types-community-detail/02-organisms-01-content-types-community-detail.escaped.html
@@ -54,35 +54,35 @@
                 &lt;article class=&quot;card card--background&quot;&gt;
                   &lt;div class=&quot;card__content&quot;&gt;
                     &lt;h2 class=&quot;card__type&quot;&gt;Toolkit&lt;/h2&gt;
+                    &lt;h3 class=&quot;card__title&quot;&gt;&lt;a href=&quot;http://lorizzle.nl/&quot;&gt;Nullizzle shizznit velizzle, hizzle, suscipit own yo', gravida vizzle, arcu.&lt;/a&gt;&lt;/h3&gt;
+                    &lt;div class=&quot;card__author&quot;&gt;
+                      &lt;div class=&quot;card__author-inner&quot;&gt;
+                        &lt;div class=&quot;card__author-image&quot;&gt;&lt;img src=&quot;../../images-patternlab/buffy-35-35.jpg&quot;&gt;&lt;/div&gt;
+                        &lt;div class=&quot;card__author-name&quot;&gt;Buffy Summers&lt;/div&gt;
+                        &lt;div class=&quot;card__author-date&quot;&gt;03/15/2015&lt;/div&gt;    
+                      &lt;/div&gt;
+                    &lt;/div&gt;
+                  &lt;/div&gt;
+                &lt;/article&gt;              &lt;/div&gt;
+              &lt;div class=&quot;views-row&quot;&gt;
+                &lt;article class=&quot;card card--background&quot;&gt;
+                  &lt;div class=&quot;card__content&quot;&gt;
+                    &lt;h2 class=&quot;card__type&quot;&gt;Toolkit&lt;/h2&gt;
+                    &lt;h3 class=&quot;card__title&quot;&gt;&lt;a href=&quot;http://baconipsum.com/&quot;&gt;Bacon ipsum dolor sit amet turducken strip steak beef ribs shank&lt;/a&gt;&lt;/h3&gt;
+                    &lt;div class=&quot;card__author&quot;&gt;
+                      &lt;div class=&quot;card__author-inner&quot;&gt;
+                        &lt;div class=&quot;card__author-image&quot;&gt;&lt;img src=&quot;../../images-patternlab/buffy-35-35.jpg&quot;&gt;&lt;/div&gt;
+                        &lt;div class=&quot;card__author-name&quot;&gt;Buffy Summers&lt;/div&gt;
+                        &lt;div class=&quot;card__author-date&quot;&gt;03/15/2015&lt;/div&gt;    
+                      &lt;/div&gt;
+                    &lt;/div&gt;
+                  &lt;/div&gt;
+                &lt;/article&gt;              &lt;/div&gt;
+              &lt;div class=&quot;views-row&quot;&gt;
+                &lt;article class=&quot;card card--background&quot;&gt;
+                  &lt;div class=&quot;card__content&quot;&gt;
+                    &lt;h2 class=&quot;card__type&quot;&gt;Toolkit&lt;/h2&gt;
                     &lt;h3 class=&quot;card__title&quot;&gt;&lt;a href=&quot;http://slipsum.com/lite/&quot;&gt;Yeah, I like animals better than people sometimes&lt;/a&gt;&lt;/h3&gt;
-                    &lt;div class=&quot;card__author&quot;&gt;
-                      &lt;div class=&quot;card__author-inner&quot;&gt;
-                        &lt;div class=&quot;card__author-image&quot;&gt;&lt;img src=&quot;../../images-patternlab/buffy-35-35.jpg&quot;&gt;&lt;/div&gt;
-                        &lt;div class=&quot;card__author-name&quot;&gt;Buffy Summers&lt;/div&gt;
-                        &lt;div class=&quot;card__author-date&quot;&gt;03/15/2015&lt;/div&gt;    
-                      &lt;/div&gt;
-                    &lt;/div&gt;
-                  &lt;/div&gt;
-                &lt;/article&gt;              &lt;/div&gt;
-              &lt;div class=&quot;views-row&quot;&gt;
-                &lt;article class=&quot;card card--background&quot;&gt;
-                  &lt;div class=&quot;card__content&quot;&gt;
-                    &lt;h2 class=&quot;card__type&quot;&gt;Toolkit&lt;/h2&gt;
-                    &lt;h3 class=&quot;card__title&quot;&gt;&lt;a href=&quot;http://chrisvalleskey.com/fillerama/&quot;&gt;Help, help, I'm being repressed!&lt;/a&gt;&lt;/h3&gt;
-                    &lt;div class=&quot;card__author&quot;&gt;
-                      &lt;div class=&quot;card__author-inner&quot;&gt;
-                        &lt;div class=&quot;card__author-image&quot;&gt;&lt;img src=&quot;../../images-patternlab/buffy-35-35.jpg&quot;&gt;&lt;/div&gt;
-                        &lt;div class=&quot;card__author-name&quot;&gt;Buffy Summers&lt;/div&gt;
-                        &lt;div class=&quot;card__author-date&quot;&gt;03/15/2015&lt;/div&gt;    
-                      &lt;/div&gt;
-                    &lt;/div&gt;
-                  &lt;/div&gt;
-                &lt;/article&gt;              &lt;/div&gt;
-              &lt;div class=&quot;views-row&quot;&gt;
-                &lt;article class=&quot;card card--background&quot;&gt;
-                  &lt;div class=&quot;card__content&quot;&gt;
-                    &lt;h2 class=&quot;card__type&quot;&gt;Toolkit&lt;/h2&gt;
-                    &lt;h3 class=&quot;card__title&quot;&gt;&lt;a href=&quot;http://www.niemanlab.org/journo-ipsum/&quot;&gt;Marshall McLuhan Colbert bump backpack journalist vast wasteland Romenesko CPM&lt;/a&gt;&lt;/h3&gt;
                     &lt;div class=&quot;card__author&quot;&gt;
                       &lt;div class=&quot;card__author-inner&quot;&gt;
                         &lt;div class=&quot;card__author-image&quot;&gt;&lt;img src=&quot;../../images-patternlab/buffy-35-35.jpg&quot;&gt;&lt;/div&gt;
@@ -103,12 +103,12 @@
               &lt;div class=&quot;views-row&quot;&gt;
                 &lt;article class=&quot;card card--icons&quot;&gt;
                   &lt;div class=&quot;card__image&quot;&gt;
-                    &lt;a href=&quot;http://web20ipsum.com&quot;&gt;&lt;img src=&quot;http://lorempixel.com/500/300/technics/3/&quot; alt=&quot;Card 5:3&quot; height=&quot;300&quot; width=&quot;500&quot;&gt;
+                    &lt;a href=&quot;http://veggieipsum.com&quot;&gt;&lt;img src=&quot;http://lorempixel.com/500/300/food/3/&quot; alt=&quot;Card 5:3&quot; height=&quot;300&quot; width=&quot;500&quot;&gt;
 &lt;/a&gt;
                   &lt;/div&gt;
                   &lt;div class=&quot;card__content&quot;&gt;
-                    &lt;h3 class=&quot;card__title&quot;&gt;&lt;a href=&quot;http://web20ipsum.com&quot;&gt;Webtwo ipsum dolor sit amet, eskobo chumby doostang bebo&lt;/a&gt;&lt;/h3&gt;
-                    &lt;div&gt;&lt;p&gt;Wufoo diigo grockit sifteo divvyshot, unigo zooomr revver. Edmodo appjet joyent skype bubbli jajah zoodles joukuu xobni hojoki edmodo appjet, mozy mzinga akismet yuntaa joost yuntaa geni tivo insala yoono chumby, grockit sococo loopt zanga etsy cloudera koofers empressr jiglu blippy. Omgpop lanyrd joukuu sococo zimbra airbnb movity jibjab, foodzie.&lt;/p&gt;&lt;/div&gt;
+                    &lt;h3 class=&quot;card__title&quot;&gt;&lt;a href=&quot;http://veggieipsum.com&quot;&gt;Veggies sunt bona vobis, proinde vos postulo&lt;/a&gt;&lt;/h3&gt;
+                    &lt;div&gt;&lt;p&gt;Mung bean squash sorrel taro coriander collard greens gumbo bitterleaf tomato. Taro water chestnut celtuce turnip yarrow celery endive scallion black-eyed pea onion. Aubergine dulse turnip greens mustard salsify garlic soybean parsley bitterleaf desert raisin courgette.&lt;/p&gt;&lt;/div&gt;
                     &lt;div class=&quot;card__counts&quot;&gt;
                       &lt;div class=&quot;view&quot;&gt;
                         &lt;div class=&quot;has-icon--evidence&quot; title=&quot;Evidence&quot;&gt;0&lt;/div&gt;
@@ -161,12 +161,12 @@
               &lt;div class=&quot;views-row&quot;&gt;
                 &lt;article class=&quot;card card--icons&quot;&gt;
                   &lt;div class=&quot;card__image&quot;&gt;
-                    &lt;a href=&quot;http://chrisvalleskey.com/fillerama/&quot;&gt;&lt;img src=&quot;http://lorempixel.com/500/300/cats/3/&quot; alt=&quot;Card 5:3&quot; height=&quot;300&quot; width=&quot;500&quot;&gt;
+                    &lt;a href=&quot;http://www.niemanlab.org/journo-ipsum/&quot;&gt;&lt;img src=&quot;http://lorempixel.com/500/300/nature/3/&quot; alt=&quot;Card 5:3&quot; height=&quot;300&quot; width=&quot;500&quot;&gt;
 &lt;/a&gt;
                   &lt;/div&gt;
                   &lt;div class=&quot;card__content&quot;&gt;
-                    &lt;h3 class=&quot;card__title&quot;&gt;&lt;a href=&quot;http://chrisvalleskey.com/fillerama/&quot;&gt;Help, help, I'm being repressed!&lt;/a&gt;&lt;/h3&gt;
-                    &lt;div&gt;&lt;p&gt;The Knights Who Say Ni demand a sacrifice! &hellip;Are you suggesting that coconuts migrate? Knights of Ni, we are but simple travelers who seek the enchanter who lives beyond these woods. You don't frighten us, English pig-dogs! Go and boil your bottoms, sons of a silly person! I blow my nose at you, so-called Ah-thoor Keeng, you and all your silly English K-n-n-n-n-n-n-n-niggits!&lt;/p&gt;&lt;/div&gt;
+                    &lt;h3 class=&quot;card__title&quot;&gt;&lt;a href=&quot;http://www.niemanlab.org/journo-ipsum/&quot;&gt;Marshall McLuhan Colbert bump backpack journalist vast wasteland Romenesko CPM&lt;/a&gt;&lt;/h3&gt;
+                    &lt;div&gt;&lt;p&gt;Like button audience atomization overcome Colbert bump Free Darko inverted pyramid we will make them pay, digital circulation strategy Like button totally blowing up on Twitter church of the savvy. Pictures of Goats section open source discuss Frontline analog thinking filters paidContent.&lt;/p&gt;&lt;/div&gt;
                     &lt;div class=&quot;card__counts&quot;&gt;
                       &lt;div class=&quot;view&quot;&gt;
                         &lt;div class=&quot;has-icon--evidence&quot; title=&quot;Evidence&quot;&gt;0&lt;/div&gt;
@@ -202,7 +202,7 @@
                 &lt;article class=&quot;card card--icons&quot;&gt;
                   &lt;div class=&quot;card__content&quot;&gt;
                     &lt;h2 class=&quot;card__type&quot;&gt;Toolkit&lt;/h2&gt;
-                    &lt;h3 class=&quot;card__primary-title&quot;&gt;&lt;a href=&quot;http://web20ipsum.com&quot;&gt;Webtwo ipsum dolor sit amet, eskobo chumby doostang bebo&lt;/a&gt;&lt;/h3&gt;
+                    &lt;h3 class=&quot;card__primary-title&quot;&gt;&lt;a href=&quot;http://veggieipsum.com&quot;&gt;Veggies sunt bona vobis, proinde vos postulo&lt;/a&gt;&lt;/h3&gt;
                     &lt;div class=&quot;card__author&quot;&gt;
                       &lt;div class=&quot;card__author-image&quot;&gt;&lt;img src=&quot;../../images-patternlab/buffy-35-35.jpg&quot;&gt;&lt;/div&gt;
                       &lt;div class=&quot;card__author-name&quot;&gt;Buffy Summers&lt;/div&gt;
@@ -264,7 +264,7 @@
                 &lt;article class=&quot;card card--icons&quot;&gt;
                   &lt;div class=&quot;card__content&quot;&gt;
                     &lt;h2 class=&quot;card__type&quot;&gt;Toolkit&lt;/h2&gt;
-                    &lt;h3 class=&quot;card__primary-title&quot;&gt;&lt;a href=&quot;http://chrisvalleskey.com/fillerama/&quot;&gt;Help, help, I'm being repressed!&lt;/a&gt;&lt;/h3&gt;
+                    &lt;h3 class=&quot;card__primary-title&quot;&gt;&lt;a href=&quot;http://www.niemanlab.org/journo-ipsum/&quot;&gt;Marshall McLuhan Colbert bump backpack journalist vast wasteland Romenesko CPM&lt;/a&gt;&lt;/h3&gt;
                     &lt;div class=&quot;card__author&quot;&gt;
                       &lt;div class=&quot;card__author-image&quot;&gt;&lt;img src=&quot;../../images-patternlab/buffy-35-35.jpg&quot;&gt;&lt;/div&gt;
                       &lt;div class=&quot;card__author-name&quot;&gt;Buffy Summers&lt;/div&gt;
@@ -306,11 +306,11 @@
                 &lt;article class=&quot;card card--icons&quot;&gt;
                   &lt;div class=&quot;card__number&quot;&gt;30,000,000&lt;/div&gt;
                   &lt;div class=&quot;card__image&quot;&gt;
-                    &lt;a href=&quot;http://web20ipsum.com&quot;&gt;&lt;img src=&quot;http://lorempixel.com/500/300/technics/3/&quot; alt=&quot;Card 5:3&quot; height=&quot;300&quot; width=&quot;500&quot;&gt;
+                    &lt;a href=&quot;http://veggieipsum.com&quot;&gt;&lt;img src=&quot;http://lorempixel.com/500/300/food/3/&quot; alt=&quot;Card 5:3&quot; height=&quot;300&quot; width=&quot;500&quot;&gt;
 &lt;/a&gt;
                   &lt;/div&gt;
                   &lt;div class=&quot;card__content&quot;&gt;
-                    &lt;h3 class=&quot;card__primary-title&quot;&gt;&lt;a href=&quot;http://web20ipsum.com&quot;&gt;Webtwo ipsum dolor sit amet, eskobo chumby doostang bebo&lt;/a&gt;&lt;/h3&gt;
+                    &lt;h3 class=&quot;card__primary-title&quot;&gt;&lt;a href=&quot;http://veggieipsum.com&quot;&gt;Veggies sunt bona vobis, proinde vos postulo&lt;/a&gt;&lt;/h3&gt;
                     &lt;div class=&quot;card__list&quot;&gt;
                       &lt;div class=&quot;card__list-label&quot;&gt;Due by:&lt;/div&gt; 3/21/2015
                     &lt;/div&gt; 
@@ -386,11 +386,11 @@
                 &lt;article class=&quot;card card--icons&quot;&gt;
                   &lt;div class=&quot;card__number&quot;&gt;30,000,000&lt;/div&gt;
                   &lt;div class=&quot;card__image&quot;&gt;
-                    &lt;a href=&quot;http://chrisvalleskey.com/fillerama/&quot;&gt;&lt;img src=&quot;http://lorempixel.com/500/300/cats/3/&quot; alt=&quot;Card 5:3&quot; height=&quot;300&quot; width=&quot;500&quot;&gt;
+                    &lt;a href=&quot;http://www.niemanlab.org/journo-ipsum/&quot;&gt;&lt;img src=&quot;http://lorempixel.com/500/300/nature/3/&quot; alt=&quot;Card 5:3&quot; height=&quot;300&quot; width=&quot;500&quot;&gt;
 &lt;/a&gt;
                   &lt;/div&gt;
                   &lt;div class=&quot;card__content&quot;&gt;
-                    &lt;h3 class=&quot;card__primary-title&quot;&gt;&lt;a href=&quot;http://chrisvalleskey.com/fillerama/&quot;&gt;Help, help, I'm being repressed!&lt;/a&gt;&lt;/h3&gt;
+                    &lt;h3 class=&quot;card__primary-title&quot;&gt;&lt;a href=&quot;http://www.niemanlab.org/journo-ipsum/&quot;&gt;Marshall McLuhan Colbert bump backpack journalist vast wasteland Romenesko CPM&lt;/a&gt;&lt;/h3&gt;
                     &lt;div class=&quot;card__list&quot;&gt;
                       &lt;div class=&quot;card__list-label&quot;&gt;Due by:&lt;/div&gt; 3/21/2015
                     &lt;/div&gt; 
