--- a/public/sites/all/themes/gesso/patternlab/public/patterns/02-organisms-02-view-modes-user-teaser/02-organisms-02-view-modes-user-teaser.html
+++ b/public/sites/all/themes/gesso/patternlab/public/patterns/02-organisms-02-view-modes-user-teaser/02-organisms-02-view-modes-user-teaser.html
@@ -56,7 +56,7 @@
     </div>
 <article class="card card--center">
   <div class="card__image">
-    <a href="#"><img src="" alt=""></a>
+    <a href="#"><img src="http://fpoimg.com/500x300?text=Card 5:3" alt="Card 5:3"></a>
   </div>
   <div class="card__content">
     <h3 class="card__title"><a href="#"></a></h3>
